started working on switching between screens, next step would be to complete the other screens and work out how to pass objects between screens

--- a/QuizTagApp/app/src/main/AndroidManifest.xml
+++ b/QuizTagApp/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         </activity>
 
         <activity android:name=".Game_Menu"
-            android:label="Game Menu"/>
+            android:label="Game Menu"
+            android:theme="@style/AppTheme"/>
     </application>
 
 </manifest>
