--- a/QuizTagApp/app/src/main/AndroidManifest.xml
+++ b/QuizTagApp/app/src/main/AndroidManifest.xml
@@ -11,16 +11,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".Main_Menu" >
+        <activity android:name=".Main_Menu" android:label="Main Menu">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity android:name=".Game_Menu"
-            android:label="Game Menu"
+            android:label="Quiz Menu"
             android:theme="@style/AppTheme"/>
     </application>
 
