--- a/QuizTagApp/app/src/main/AndroidManifest.xml
+++ b/QuizTagApp/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".Main_Menu" android:label="MooSeum">
+        <activity android:name=".Frontend.Main_Menu" android:label="MooSeum">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,11 +23,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Game_Menu"
+        <activity android:name=".Frontend.Game_Menu"
             android:label="Quiz Menu"
             android:theme="@style/AppTheme"/>
 
-        <activity android:name=".Question_Screen"
+        <activity android:name=".Frontend.Question_Screen"
             android:label="@string/question_screen_title"
             />
     </application>
