Added intent for shop screen, not tested

--- a/QuizTagApp/app/src/main/AndroidManifest.xml
+++ b/QuizTagApp/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         <activity android:name=".Frontend.Question_Screen"
             android:label="@string/question_screen_title"
             />
+
+        <activity android:name=".Frontend.Shop_Menu"
+            android:label="Shop Screen"/>
     </application>
 
 </manifest>
