--- a/QuizTagApp/app/src/main/AndroidManifest.xml
+++ b/QuizTagApp/app/src/main/AndroidManifest.xml
@@ -5,9 +5,13 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+
+    <uses-permission android:name="android.permission.NFC" />
+    <uses-feature android:name="android.hardware.nfc" android:required="true" />
+
     <uses-sdk
-        android:minSdkVersion="11"
-        android:targetSdkVersion="19" />
+        android:minSdkVersion="14"
+        android:targetSdkVersion="19"/>
 
     <application
         android:allowBackup="true"
