added a class to play with nfc, currently works when pressing scan, added menu options to buy hints and skips without quitting the game, and minor bug fixes

--- a/QuizTagApp/app/src/main/AndroidManifest.xml
+++ b/QuizTagApp/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
         <activity android:name=".Frontend.Shop_Menu"
             android:label="Shop Screen"/>
 
+        <activity android:name=".Frontend.NFC_Tag_Writer"
+            android:label="NFC Stuff"/>
+
     </application>
 
 </manifest>
