added more questions and fixed NFC bug where NFC settings wouldn't open on nfc being off

--- a/QuizTagApp/app/src/main/AndroidManifest.xml
+++ b/QuizTagApp/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
 
-                <data android:mimeType="text/plain" />
+                <data android:mimeType="application/[pagage name]" />
             </intent-filter>
         </activity>
 
