--- a/QuizTagApp/app/src/main/AndroidManifest.xml
+++ b/QuizTagApp/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".Frontend.Main_Menu" android:label="MooSeum">
+        <activity android:name=".Frontend.Main_Menu" android:label="MooSeum"
+            android:launchMode="singleTask">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -48,7 +49,9 @@
             android:label="Shop Screen"/>
 
         <activity android:name=".Frontend.NFC_Tag_Writer"
-            android:label="NFC Stuff"/>
+            android:label="NFC Stuff">
+
+        </activity>
 
     </application>
 
