tried splitting code up into methods, the tag still can't be read, putting the intent filter in the android manifest makes another instance of the activity open up instead of making it read automatically, adding the reading on new intent also opens up a new instance, going to branch project, delete all nfc code and start again

--- a/QuizTagApp/app/src/main/AndroidManifest.xml
+++ b/QuizTagApp/app/src/main/AndroidManifest.xml
@@ -50,7 +50,13 @@
 
         <activity android:name=".Frontend.NFC_Tag_Writer"
             android:label="NFC Stuff">
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="text/plain" />
+            </intent-filter>
         </activity>
 
     </application>
