--- a/QuizTagWriter/app/src/main/AndroidManifest.xml
+++ b/QuizTagWriter/app/src/main/AndroidManifest.xml
@@ -2,10 +2,15 @@
 <manifest package="baldeep.quiztagwriter"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-sdk
+        android:minSdkVersion="14"
+        android:targetSdkVersion="19"/>
+
     <uses-permission android:name="android.permission.NFC"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
