--- a/QuizTagApp/app/src/main/AndroidManifest.xml
+++ b/QuizTagApp/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".Frontend.Main_Menu" android:label="MooSeum"
+        <activity android:name=".Frontend.Main_Menu" android:label="QuizTag"
             android:launchMode="singleTask">
 
             <intent-filter>
