Created the scan screen, with url, still to test this though

--- a/QuizTagApp/app/src/main/AndroidManifest.xml
+++ b/QuizTagApp/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
             android:label="NFC Stuff">
 
         </activity>
+        <activity android:name=".Frontend.Scan_Screen"/>
 
     </application>
 
