--- a/QuizTagApp/app/src/main/AndroidManifest.xml
+++ b/QuizTagApp/app/src/main/AndroidManifest.xml
@@ -14,11 +14,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/moo_tag_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".Frontend.Main_Menu" android:label="QuizTag"
+        <activity android:name=".Frontend.Main_Menu" android:label="MooTag"
             android:launchMode="singleTask">
 
             <intent-filter>
