added quizTag screen and fixed null pointes

--- a/QuizTagApp/app/src/main/AndroidManifest.xml
+++ b/QuizTagApp/app/src/main/AndroidManifest.xml
@@ -54,6 +54,8 @@
         </activity>
         <activity android:name=".Frontend.Scan_Screen"/>
 
+        <activity android:name=".Frontend.Quiz_Tag_Screen"/>
+
     </application>
 
 </manifest>
