finished and polished question screen end game...again, fixed single hint showing, fixed smartcase connection, fixed quiztag, back button crash to do, finish quiztag reading/quiz loading from file. add custom NDEF record type

--- a/QuizTagApp/app/src/main/AndroidManifest.xml
+++ b/QuizTagApp/app/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
             android:label="@string/scan_screen_title"/>
 
 
-        <activity android:name=".Frontend.SmartScreen"
+        <activity android:name=".Frontend.Smart_Case_Screen"
             android:label="@string/smartcase_title"/>
 
         <activity android:name=".Frontend.Quiz_Tag_Screen"
